# hexlet-cli

./: .gitignore  Cargo.toml
data/locales/: commands.en.yml  main.en.yml
data/skeletons/lesson/code/: Makefile  main.yml
data/skeletons/lesson/codex/: main.yml
data/skeletons/lesson/terminal/: Gruntfile.js  Makefile  main.yml  test-main.js
data/skeletons/lesson/terminal/js/terminal/: strings.js
src/: hexlet-lesson.rs  hexlet.rs  lesson.rs  routes.rs  utils.rs
